# testovoe_zadanie

./: CMakeLists.txt  IAction.h  ISerializable.h  IShape.h  application.cpp  application.h  circle.cpp  circle.h  connection.cpp  connection.h  create_shapes_by_type.cpp  create_shapes_by_type.h  createcircleaction.cpp  createcircleaction.h  createconnectionaction.cpp  createconnectionaction.h  createrectangleaction.cpp  createrectangleaction.h  createtriangleaction.cpp  createtriangleaction.cpp.autosave  createtriangleaction.h  deleteshapeaction.cpp  deleteshapeaction.h  draganddropaction.cpp  draganddropaction.h  getFreeId.cpp  getFreeId.h  main.cpp  rectangle.cpp  rectangle.h  screen.cpp  screen.h  triangle.cpp  triangle.h
